--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -67,7 +67,7 @@
                 android:background="@drawable/rectangle"
                 android:drawableLeft="@drawable/ic_baseline_person_24"
                 android:padding="15dp"
-                android:textColorHint="@color/black"
+                android:textColorHint="@color/light_grey"
                 android:drawablePadding="10dp"
                 android:inputType="textEmailAddress"
                 android:elevation="10dp"
@@ -80,7 +80,7 @@
                 android:background="@drawable/rectangle"
                 android:drawableLeft="@drawable/ic_baseline_person_24"
                 android:padding="15dp"
-                android:textColorHint="@color/black"
+                android:textColorHint="@color/light_grey"
                 android:drawablePadding="10dp"
                 android:inputType="textEmailAddress"
                 android:elevation="10dp"
